--- a/model-checkpoint.ipynb
+++ b/model-checkpoint.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# House Price Prediction Model\n",
     "\n",
-    "Created By: [iamv1n](https://iamv1n.xyz)"
+    "Created By: [Rahul](https://github.com/Rahul207158)"
    ]
   },
   {
